Verbeteringen adhv feedback

--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -27,7 +27,7 @@ The Fashion Society is constant aan het uitbreiden, dit onder meer door overname
 
 De onderzoeksvragen die gevormd worden bij de vergelijking tussen gRPC met Protocol Buffers en REST met JSON zijn als volgt.
 \begin{itemize}
-    \item Welk dataformaat is het meest performant voor de Discovery API van The Fashion Society?
+    \item Welk dataformaat is performanter voor de Discovery API van The Fashion Society?
     \item Is gRPC met ProtocolBuffers sneller dan REST API met JSON voor de implementatie van The Fashion Society?
     \item Is gRPC met ProtocolBuffers efficiënter dan REST API met JSON op gebied van CPU gebruik voor de implementatie van The Fashion Society?
 \end{itemize}
