--- a/bachproef/bachproef-tin.bib
+++ b/bachproef/bachproef-tin.bib
@@ -75,4 +75,19 @@
   urldate = {2021-04-04},
 }
 
+@Online{FowlerDisObj,
+  author  = {Martin Fowler},
+  date    = {2014-08-13},
+  title   = {Microservices and the first law of distributed objects},
+  url     = {https://martinfowler.com/articles/distributed-objects-microservices.html},
+  urldate = {2021-04-11},
+}
+
+@Online{GalOz2008,
+  author = {Arnon Rotem-Gal-Oz},
+  date   = {2008-01-01},
+  title  = {Fallacies of Distributed Computing Explained},
+  url    = {https://www.researchgate.net/publication/322500050_Fallacies_of_Distributed_Computing_Explained},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
