Interne architectuur kort uitgelegd
TO DO: Afbeeldingen toevoegen.

--- a/bachproef/bachproef-tin.bib
+++ b/bachproef/bachproef-tin.bib
@@ -90,4 +90,32 @@
   url    = {https://www.researchgate.net/publication/322500050_Fallacies_of_Distributed_Computing_Explained},
 }
 
+@Online{Richardson,
+  author  = {Chris Richardson},
+  title   = {Pattern: Self Registration},
+  url     = {https://microservices.io/patterns/self-registration.html},
+  urldate = {2021-04-18},
+}
+
+@Online{Richardsona,
+  author  = {Chris Richardson},
+  title   = {Pattern: Service Registry},
+  url     = {https://microservices.io/patterns/service-registry.html},
+  urldate = {2021-04-18},
+}
+
+@Online{Richardsonb,
+  author  = {Chris Richardson},
+  title   = {Patten: API-gateway},
+  url     = {https://microservices.io/patterns/apigateway.html},
+  urldate = {2021-04-18},
+}
+
+@Online{Richardsonc,
+  author  = {Chris Richardson},
+  title   = {Pattern: Microservice architecture},
+  url     = {https://microservices.io/patterns/microservices.html},
+  urldate = {2021-04-18},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
